--- a/package.json
+++ b/package.json
@@ -19,8 +19,7 @@
     "babel-plugin-macros": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0",
-    "react-push-notification": "^1.5.4"
+    "react-icons": "^5.3.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
