--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@mui/icons-material": "^6.1.6",
+    "@supabase/supabase-js": "^2.46.1",
     "babel-plugin-macros": "^3.1.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
