--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "@mui/icons-material": "^6.1.6",
     "@supabase/supabase-js": "^2.46.1",
     "babel-plugin-macros": "^3.1.0",
+    "node-notifier": "^10.0.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-icons": "^5.3.0"
+    "react-icons": "^5.3.0",
+    "react-router-dom": "^7.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.13.0",
